# quasar

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  run_kani_audit.sh
derive/: Cargo.toml
derive/src/: client_macro.rs  declare_program.rs  helpers.rs  instruction.rs  lib.rs  program.rs  seeds.rs  serialize.rs
derive/src/account/: accessors.rs  dynamic.rs  fixed.rs  layout.rs  methods.rs  mod.rs  one_of.rs  seeds.rs  traits.rs
derive/src/accounts/: attrs.rs  client.rs  field_kind.rs  fields.rs  fields_process.rs  fields_support.rs  init.rs  instruction_args.rs  mod.rs  plan.rs  seeds.rs
derive/src/accounts/emit/: init.rs  lifecycle.rs  migrate.rs  mod.rs  ops.rs  output.rs  params.rs  parse.rs  typed_emit.rs
derive/src/accounts/resolve/: lower.rs  mod.rs  model.rs  planner.rs  rules.rs  specs.rs  support.rs
derive/src/accounts/semantics/: lower.rs
derive/src/accounts/syntax/: attrs.rs  mod.rs  pda.rs
derive/tests/: deny_domain_strings.rs
derive/tests/compile_pass/: account_migrate.rs  composite_account.rs  custom_behavior_check.rs  custom_behavior_exit.rs  custom_behavior_init.rs  derive_seeds.rs  exit_close.rs  init_if_needed_typed_seed.rs  init_interface_account_typed_seed.rs  init_method_chain_typed_seed.rs  init_parenthesized_typed_seed.rs  init_pda.rs  init_token_params.rs  namespaced_behavior.rs  optional_account.rs  pda_account.rs  plain_account.rs  pre_associated_token_init.rs  pre_ata_init.rs  realloc_account.rs  token_validate.rs  user_checks.rs
example/: Cargo.toml
example/src/: lib.rs
metadata/: Cargo.toml
metadata/src/: account_init.rs  init.rs  lib.rs  pda.rs  prelude.rs  program.rs  state.rs  validate.rs
metadata/src/accounts/: master_edition.rs  metadata.rs  mod.rs  prelude.rs
metadata/src/instructions/: create_metadata.rs  mod.rs  update_metadata.rs
metadata/tests/: compile_pass.rs  miri.rs
metadata/tests/compile_fail/: init_master_edition_without_behavior.rs  init_master_edition_without_behavior.stderr  init_without_behavior.rs  init_without_behavior.stderr  metadata_bad_field_ref.rs  metadata_bad_field_ref.stderr
metadata/tests/compile_pass/: init_metadata_with_behavior.rs  validate_master_edition_check.rs  validate_metadata_check.rs
quasar/: Cargo.toml
spl/: Cargo.toml
spl/src/: associated_token.rs  close.rs  cpi.rs  exit.rs  init.rs  interface.rs  lib.rs  prelude.rs  token.rs  token_2022.rs  validate.rs
spl/src/accounts/: associated_token.rs  mint.rs  mod.rs  prelude.rs  token.rs  token_close.rs  token_sweep.rs
spl/src/associated_token/: mod.rs
spl/src/interface/: mod.rs
spl/src/metadata/: constants.rs  cpi.rs  init.rs  mod.rs  program.rs  state.rs
spl/src/metadata/instructions/: create_metadata.rs  mod.rs  update_metadata.rs
spl/src/ops/: associated_token.rs  ata_init.rs  capabilities.rs  close.rs  ctx.rs  mint.rs  mod.rs  realloc.rs  sweep.rs  token.rs
spl/src/token/: mod.rs
spl/src/token_2022/: mod.rs
spl/tests/: miri.rs
spl/tests/compile_fail/: bare_op_arg.rs  bare_op_arg.stderr  bare_op_arg_none.rs  bare_op_arg_none.stderr  bare_op_arg_some.rs  bare_op_arg_some.stderr  close_ambiguous_args.rs  close_ambiguous_args.stderr  close_mint.rs  close_mint.stderr  dup_close_unsound.rs  dup_close_unsound.stderr  duplicate_op_arg.rs  duplicate_op_arg.stderr  missing_behavior_module.rs  missing_behavior_module.stderr  missing_builder_method.rs  missing_builder_method.stderr  multi_token_program_missing_mint_selector.rs  multi_token_program_missing_mint_selector.stderr  multi_token_program_missing_token_selector.rs  multi_token_program_missing_token_selector.stderr  requires_mut_behavior.rs  requires_mut_behavior.stderr  typo_field_ref.rs  typo_field_ref.stderr  typo_freeze_authority.rs  typo_freeze_authority.stderr  unknown_op_arg.rs  unknown_op_arg.stderr  wrong_category_program_override.rs  wrong_category_program_override.stderr
tests/programs/test-errors/: Cargo.toml
tests/programs/test-errors/src/: errors.rs  lib.rs  state.rs
tests/programs/test-errors/src/instructions/: account_check.rs  address_custom_error.rs  address_default.rs  constraint_default.rs  constraint_fail.rs  custom_error.rs  explicit_error.rs  has_one_custom.rs  has_one_default.rs  header_dup_mut.rs  header_dup_readonly.rs  header_dup_signer.rs  header_executable.rs  header_nodup_mut.rs  header_nodup_mut_signer.rs  header_nodup_signer.rs  mod.rs  mut_account_check.rs  program_check.rs  program_error.rs  require_eq_check.rs  require_false.rs  require_neq_check.rs  signer_mut_check.rs  signer_needed.rs  signer_readonly_check.rs  system_account_check.rs  three_accounts_dup.rs  two_accounts_check.rs  unchecked_account_check.rs
tests/programs/test-events/: Cargo.toml
tests/programs/test-events/src/: events.rs  lib.rs
tests/programs/test-events/src/instructions/: emit_address_event.rs  emit_bool_event.rs  emit_empty_event.rs  emit_large_event.rs  emit_multi_field.rs  emit_two_events.rs  emit_u64_event.rs  emit_via_cpi.rs  mod.rs
tests/programs/test-token-cpi/: Cargo.toml
tests/programs/test-token-cpi/src/: lib.rs
tests/programs/test-token-cpi/src/instructions/: approve.rs  approve_interface.rs  approve_t22.rs  burn.rs  burn_interface.rs  burn_t22.rs  close_token.rs  close_token_account.rs  close_token_account_interface.rs  close_token_account_t22.rs  close_token_interface.rs  close_token_t22.rs  init_ata.rs  init_if_needed_ata.rs  init_if_needed_mint.rs  init_if_needed_mint_with_freeze.rs  init_if_needed_token.rs  init_mint.rs  init_mint_with_metadata.rs  init_token_account.rs  interface_transfer.rs  (+20 more)
zeropod/: Cargo.toml
zeropod-derive/: Cargo.toml
zeropod-derive/src/: compact.rs  fixed.rs  lib.rs  schema.rs  type_map.rs  validate.rs
zeropod/src/: error.rs  lib.rs  traits.rs
zeropod/src/pod/: bool.rs  mod.rs  numeric.rs  option.rs  string.rs  vec.rs  wincode.rs
zeropod/tests/: api_ergonomics.rs  compact_backend.rs  fixed_backend.rs  fixed_enum.rs  fixed_nested.rs  generic_fixed.rs  instruction_abi_parity.rs  layout_golden.rs  pod_richness.rs  pod_types.rs  roundtrip.rs  type_tightening.rs  validation.rs
(+474 files in other folders)
