[package]
name = "quasar-derive"
description = "Proc macros for the Quasar Solana framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quasar-schema = { path = "../schema" }

[dev-dependencies]
trybuild = "1"
quasar-lang = { path = "../lang" }
quasar-derive = { path = "../derive" }
quasar-spl = { path = "../spl" }
solana-address = { version = ">=2.2, <2.6", features = ["copy"] }
solana-program-error = "3.0.0"
