[package]
name = "quasar-metadata"
description = "Metaplex Token Metadata integration for the Quasar Solana framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
debug = []

[dependencies]
quasar-lang = { path = "../lang" }
solana-address = { version = ">=2.2, <2.6", features = ["copy"] }

[dev-dependencies]
trybuild = "1"
solana-program-error = ">=2.2"
