[package]
name = "quasar-test-token-cpi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[features]
default = ["alloc"]
alloc = ["quasar-core/alloc"]
debug = []

[dependencies]
quasar-core = { path = "../../../core" }
quasar-spl = { path = "../../../spl", features = ["metadata"] }
solana-address = "2.2"
solana-instruction = "3.2"

[dev-dependencies]
mollusk-svm = "0.10.3"
mollusk-svm-programs-token = "0.10.3"
spl-token-interface = "2.0.0"
solana-program-pack = "3.1.0"
solana-account = "3.4"
solana-address = { version = "2.2", features = ["decode"] }
solana-instruction = { version = "3.2", features = ["bincode"] }
