[package]
name = "quasar-test-token-cpi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[features]
default = ["alloc"]
alloc = []
debug = []

[dependencies]
quasar-lang = { path = "../../../lang" }
quasar-derive = { path = "../../../derive" }
quasar-spl = { path = "../../../spl" }

[dev-dependencies]
